# semantic-chat

./: .env.example  README.md  config.py  main.py  pyproject.toml  requirements.txt
cli/: config.py  embedding.py  run.py
cli/extensions/storage/: base_storage.py  supabase_storage.py
cli/extractor/: extractor_processor.py  markdown_extractor.py
cli/helpers/: file.py
datasets/: archive.md
