[tool.poetry]
name = "ai-supabase"
version = "0.1.0"
description = ""
authors = ["Alfin Surya <benjaminstwo@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_supabase"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
