[tool.poetry]
name = "ai-supabase"
version = "0.1.0"
description = ""
authors = ["Alfin Surya <benjaminstwo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
python-dotenv = "^1.0.1"
langchain = "^0.2.5"
supabase = "^2.5.1"
langchain-community = "^0.2.5"
langchain-openai = "^0.1.9"
openai = "=1.26.0"
spacy = "^3.7.5"
langchain-fireworks = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
